--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "scripts": {
     "next": "next",
-    "dev": "node server/index.js",
+    "dev": "yarn build && node server/index.js",
     "build": "next build",
     "start": "NODE_ENV=production node server/index.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "bulma": "^0.8.0",
