--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "bulma": "^0.8.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "express-validator": "^6.2.0",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.7",
     "next": "9.0.5",
     "node-sass": "^4.13.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "uid-safe": "^2.1.5"
   }
 }
