--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "next": "next",
-    "dev": "yarn build && node server/index.js",
+    "dev": "node server/index.js",
     "build": "next build",
     "start": "NODE_ENV=production node server/index.js"
   },
@@ -19,6 +19,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "bulma": "^0.8.0",
+    "css-loader": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
@@ -32,6 +33,8 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-router-dom": "^5.1.2",
+    "style-loader": "^1.0.0",
+    "styled-components": "^4.4.1",
     "uid-safe": "^2.1.5"
   }
 }
