--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "bulma": "^0.8.0",
+    "connect-mongo": "^3.1.2",
     "css-loader": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
