--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.2.0",
+    "isomorphic-fetch": "^2.2.1",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.7",
     "next": "9.0.5",
