--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bulma": "^0.8.0",
     "connect-mongo": "^3.1.2",
