--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "style-loader": "^1.0.0",
     "styled-components": "^4.4.1",
     "uid-safe": "^2.1.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.1"
   }
 }
