--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "next": "next",
     "dev": "node server/index.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server/index.js"
+    "start": "SET NODE_ENV=production & node server/index.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
@@ -16,10 +16,13 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
+    "babel-preset-es2015": "^6.24.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "bulma": "^0.8.0",
     "connect-mongo": "^3.1.2",
+    "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -28,7 +31,7 @@
     "isomorphic-fetch": "^2.2.1",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.7",
-    "next": "9.0.5",
+    "next": "^9.0.8-canary.4",
     "node-sass": "^4.13.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
