--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "next": "next",
     "dev": "node server/index.js",
     "build": "next build",
-    "start": "SET NODE_ENV=production & node server/index.js"
+    "start": "NODE_ENV=production node server/index.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
