--- a/package.json
+++ b/package.json
@@ -42,7 +42,5 @@
     "styled-components": "^4.4.1",
     "uid-safe": "^2.1.5"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.1"
-  }
+  "devDependencies": {}
 }
