client side transition fixes

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^5.1.2",
     "style-loader": "^1.0.0",
     "styled-components": "^4.4.1",
+    "styled-jsx": "^3.2.4",
     "uid-safe": "^2.1.5"
   },
   "devDependencies": {}
