--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.2.0",
+    "gmail-send": "^1.8.10",
     "isomorphic-fetch": "^2.2.1",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.7",
