--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "bulma": "^0.8.0",
+    "compression": "^1.7.4",
     "connect-mongo": "^3.1.2",
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
+    "csurf": "^1.10.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.2.0",
     "gmail-send": "^1.8.10",
+    "helmet": "^3.21.2",
     "isomorphic-fetch": "^2.2.1",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.7",
